--- a/.github/workflows/main_calculadoraseidortech.yml
+++ b/.github/workflows/main_calculadoraseidortech.yml
@@ -34,6 +34,7 @@ jobs:
         with:
           name: node-app
           path: .
+          include-hidden-files: true
 
   deploy:
     runs-on: ubuntu-latest
@@ -62,4 +63,5 @@ jobs:
           app-name: 'calculadoraseidortech'
           slot-name: 'Production'
           package: .
+
           
