--- a/.github/workflows/main_techcalculadora.yml
+++ b/.github/workflows/main_techcalculadora.yml
@@ -28,6 +28,10 @@ jobs:
           npm install
           npm run build --if-present
           npm run test --if-present
+          
+      - name: Zip all files for upload between jobs
+        # IMPORTANT: .next is a hidden folder and will NOT be included in the zip unless we specify it
+        run: zip next.zip ./* .next -qr
 
       - name: Upload artifact for deployment job
         uses: actions/upload-artifact@v4
@@ -57,3 +61,4 @@ jobs:
           
       - name: Delete zip file
         run: rm next.zip
+
