--- a/package.json
+++ b/package.json
@@ -8,6 +8,10 @@
     "start": "node_modules/next/dist/bin/next start",
     "lint": "next lint"
   },
+  "engines": {
+    "node": ">=20.0.0",
+    "npm": ">=10.0.0"
+  },
   "dependencies": {
     "@azure/msal-node": "^5.0.3",
     "@nextui-org/react": "^2.4.8",
